# suzu-backend

./: Cargo.toml  README.md  build.rs  qiita.json
.github/workflows/: ci.yaml  deploy.yaml
.sqlx/: query-a45753f46ec60abf77dfbac9f7b2b644f9c66d1fbfae9b35ba75422e6cf712f1.json  query-e0594583c44a8d6c05939fc66974c62d8f20a20eb28e2c3cda4bd56b4a825973.json  query-e091cea11d0ca09f6b45a63140e4de43d3cfff785f125f0dbdc5a88b789371a0.json
api/: Cargo.toml  Dockerfile  build.rs
api/client/: package.json
api/client/api/proto/: SuzuServiceClientPb.ts  suzu_pb.d.ts  suzu_pb.js
api/proto/: buf.gen.yaml  package-lock.json  package.json  suzu.proto
api/proto/client/api/proto/suzu/v1/: SuzuServiceClientPb.ts  suzu_pb.d.ts  suzu_pb.js
api/proto/gen_ts/v1/: suzu_connect.ts  suzu_pb.ts
api/proto/suzu/v1/: suzu.proto
api/src/: controller.rs  main.rs
api/src/controller/: blog_controller.rs
batch/: Cargo.toml  Dockerfile
batch/src/: main.rs
envoy/: Dockerfile  envoy-template.yaml
infra/: Cargo.toml
infra/src/: ameba_site_repository.rs  hatena_site_repository.rs  lib.rs  mysql_repository.rs  qiita_site_repository.rs  sizu_site_repository.rs  zenn_site_repository.rs
infra/tool/: docker-compose.yaml  schema.sql
proto/: suzu.proto
src/: main.rs
src/controller/: blog_controller.rs
