[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infra = { path = "../infra" }
prost = "0.12.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14" }
tonic = "0.10.2"
tonic-web = "0.10.2"
tower-http = { version = "0.4.4", features = ["cors"] }


[build-dependencies]
tonic-build = "0.8"
