[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = "0.11.23"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
sqlx-mysql = "0.7.3"
once_cell = "1.19.0"
futures = "0.3.29"
scraper = "0.18.1"

